alter List Builder to correct compile error